# html-day-render-handwriting

./: do_function.py  index.html  package-lock.json  package.json  proxy-server.js  proxy_server.py  pyproject.toml  readme  readme.md  requirements.txt
cors-proxy-do-python/: DEPLOYMENT.md  do_function.py
docs/: index.html
transcripts/: 2025-07-31-cursor-init-ocr.md  2025-08-01-cursor-docs.md  cursor-2025-08-02-html-day-ocr-extended.md
